# python-uneval

./: .gitignore  LICENSE  README.md  changes.md  pyproject.toml
uneval/: __init__.py  builders.py  convert_code.py  convert_lambda.py  expression.py  to_ast.py
