[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uneval"
version = "0.0.1"
authors = [
    {name = "lverweijen", email = "lauwerund@gmail.com"}
]
description = "Library for generating python-expressions"
readme = "README.md"
requires-python = ">= 3.10"
keywords = [
    "expression",
    "ast",
    "dsl",
    "fexpr",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
license = {text = "Apache License 2.0"}

[project.urls]
Homepage = "https://github.com/lverweijen/pyuneval"
Repository = "https://github.com/lverweijen/pyuneval"
Issues = "https://github.com/lverweijen/pyuneval/issues"

[tool.setuptools.packages.find]
include = ["uneval*"]
